pbuilder (0.167) UNRELEASED; urgency=low

  [ Junichi Uekawa ]
  * examples/execute_installtest.sh: update to support multiple packages
    as apt target.
  * Documentation/pbuilder.xml: Improve documentation wordings.
  
  [ Loic Minier ]
  * Tune aptitude opts in pbuilder-satisfydepends-aptitude to handle complex
    dependencies in experimental, to support unsigned APT repositories, and to
    not install Recommends.

 -- Junichi Uekawa <dancer@debian.org>  Sat,  5 May 2007 19:25:12 +0900

pbuilder (0.166) unstable; urgency=low

  [ Junichi Uekawa ]
  * Re-Bug fix: "pbuilder: pbuilder-uml should not overwrite network
    configuration", thanks to Paul TBBle Hampson (Closes: #391915).
  * Bug fix: "pbuilder-uml: --uml-ip broken", thanks to Paul TBBle Hampson
    (Closes: #416920).
  * Manual page SEE ALSO fix, '.RI'->'.BR' (closes: #409135)
  * minor update to documentation.
  * remove CVS Id banners since they have no meaning on git trees.
  * pbuilder-uml: do not build for amd64, dependencies are not satisfied (yet).
  * pdebuild.1, pbuilder.8: --debbuildopts, --debootstrapopts documentation update.
  
  [ Loic Minier ]
  * New pbuilder-satisfydepends-aptitude resolver based on aptitude; based on
    an idea by Mike Hommey; closes: #337015.

 -- Junichi Uekawa <dancer@debian.org>  Tue, 17 Apr 2007 08:42:01 +0900

pbuilder (0.165) unstable; urgency=low

  [ Junichi Uekawa ]
  * pbuilder: Build-dep resolution cannot determine the architecture being
    built on when building under fakeroot (closes: #415546) thanks to Paul
    TBBle Hampson for the patch.
  * pbuilder-uml: enable for amd64
  * Use $BUILDRESULT with pdebuild-internal thanks to Anderson Lizardo
    (closes: #399484)
  * Change 'SEE ALSO' spacing from 'pdebuild (1)' => 'pdebuild(1)' to.
    (closes: #409135)
  * Try to warn only if network configuration files are not found on host
    OS, not error out. (closes: #391915)
  * support UML_IP=dhcp. (closes: #415544)
