@@ -178,6 +178,9 @@ used in conjunction with tools like debdiff.
  \url{/usr/share/doc/pbuilder/pbuilder-doc.html}: pbuilder manual
  \item cowdancer package
  \item piuparts package
+ \item autodebtest: Ubuntu automatic testing system
+ \item schroot / dchroot 
+ \item buildd
 \end{itemize}
 
 \end{document}
