@@ -4,6 +4,7 @@ pbuilder (0.167) UNRELEASED; urgency=low
   * examples/execute_installtest.sh: update to support multiple packages
     as apt target.
   * Documentation/pbuilder.xml: Improve documentation wordings.
+    add more pbuilder-test documentation.
   
   [ Loic Minier ]
   * Tune aptitude opts in pbuilder-satisfydepends-aptitude to handle complex
